@@ -1,3 +1,9 @@
+2013-01-14  Tom Tromey  <tromey@redhat.com>
+
+	* gdb.dwarf2/dw2-error.exp: New file.
+	* gdb.dwarf2/dw2-error.c: New file.
+	* gdb.dwarf2/dw2-error.S: New file.
+
 2013-01-13  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
 	* gdb.cp/parse-lang.cc: New file.
